# code-style

./: .clang-format  .gitignore  CMakeLists.txt
source-c/: CMakeLists.txt
source-c/src/: main.c  some-source-code.c  some-source-code.h
source-cpp/: CMakeLists.txt
source-cpp/src/: main.cpp  some-source-code.cpp  some-source-code.hpp  some-source-code.inl
